# Gesti-n-de-Turnos

./: REQUIREMENTS.md
.atl/: skill-registry.md
backend/: .gitignore  README.md  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: main.py
backend/app/api/v1/: __init__.py  auth.py  availability.py  bookings.py  health.py  organizations.py  slots.py
backend/app/core/: config.py  deps.py  exceptions.py  security.py  time.py
backend/app/db/: base.py  session.py
backend/app/models/: __init__.py  availability.py  booking.py  organization.py  refresh_token.py  user.py
backend/app/schemas/: auth.py  availability.py  booking.py  organization.py  slot.py
backend/app/services/: auth_service.py  availability_query.py  availability_service.py  booking_service.py  organization_service.py  slot_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_auth_flow.py  test_availability.py  test_booking_concurrency.py  test_bookings_lifecycle.py  test_smoke.py  test_tenant_isolation.py
backend/tests/unit/: test_slot_service.py
